@@ -1,2 +1,0 @@
-arpy==1.1.1
-## The following requirements were added by pip freeze:
