@@ -1,6 +1,0 @@
-kind: import
-description: The kind of this element is irrelevant.
-sources:
-- kind: tar
-  url: tmpdir:/a.tar.lz
-  ref: foo
