@@ -1,6 +1,0 @@
-kind: import
-description: The kind of this element is irrelevant.
-sources:
-- kind: deb
-  url: tmpdir:/a_deb.deb
-  ref: foo
