@@ -35,10 +35,9 @@ commands_post:
 deps =
     py{35,36,37,38}: -rrequirements/requirements.txt
     py{35,36,37,38}: -rrequirements/dev-requirements.txt
-    py{35,36,37,38}: -rrequirements/plugin-requirements.txt
 
     # Install external plugins for plugin tests
-    py{35,36,37,38}-plugins: git+https://gitlab.com/buildstream/bst-plugins-experimental.git@{env:BST_PLUGINS_EXPERIMENTAL_VERSION:{[config]BST_PLUGINS_EXPERIMENTAL_VERSION}}#egg=bst_plugins_experimental[ostree]
+    py{35,36,37,38}-plugins: git+https://gitlab.com/buildstream/bst-plugins-experimental.git@{env:BST_PLUGINS_EXPERIMENTAL_VERSION:{[config]BST_PLUGINS_EXPERIMENTAL_VERSION}}#egg=bst_plugins_experimental[ostree,deb]
 
     # Only require coverage and pytest-cov when using it
     !nocover: -rrequirements/cov-requirements.txt
@@ -149,7 +148,6 @@ commands =
 deps =
     -rrequirements/requirements.txt
     -rrequirements/dev-requirements.txt
-    -rrequirements/plugin-requirements.txt
 
 #
 # Running static type checkers
@@ -175,7 +173,6 @@ deps =
     sphinx_rtd_theme >= 0.4.2
     pytest
     -rrequirements/requirements.txt
-    -rrequirements/plugin-requirements.txt
     git+https://gitlab.com/BuildStream/bst-plugins-experimental.git@be5ac19e5062bc23a46ed8ce7aa2958a2653c917#egg=bst_plugins_experimental[ostree]
 passenv =
     BST_FORCE_SESSION_REBUILD
@@ -204,7 +201,6 @@ commands = {posargs}
 deps =
     -rrequirements/requirements.txt
     -rrequirements/dev-requirements.txt
-    -rrequirements/plugin-requirements.txt
 whitelist_externals = *
 
 
@@ -225,7 +221,6 @@ commands = pytest --basetemp {envtmpdir} --ignore tests -k "{posargs}"
 deps =
     -rrequirements/requirements.txt
     -rrequirements/dev-requirements.txt
-    -rrequirements/plugin-requirements.txt
 
 # When building using PEP518 and 517, we don't want default dependencies
 # installed by the base environment.
